syntax = "proto3";

package gamedef;


// 
enum TriggerType
{
	TriggerNone 	= 0;
	EventLogin 		= 11;
	EventLogout 	= 12;
	RecvMessage		= 20;
}

enum ActionType
{
	ActionNone = 0;
}


message BehaviorDefine
{
	int32 ID = 1;				// [table] GenMapKey: true
	
	bool Enable = 2;			// 是否启用
	
	TriggerType Trigger = 11;	// 触发器类型
	
	string MessageName = 12;	// 消息触发时匹配的消息名称
	
	string ConditionExpr = 21;	// 条件表达式
	
	ActionType Action = 31;		// 动作类型
}


// [table] GenTableCode: true
message BehaviorFile
{
	repeated BehaviorDefine Behavior = 1;
}